# candle-experiments

./: .gitignore  Cargo.toml
src/: main.rs
src/utils/: files.rs
whisper/: .gitignore
whisper/model/: download_model.sh
whisper/src/: decoder.rs  main.rs
