[workspace]
members = ["whisper"]

[package]
name = "candle-experiments"
version = "0.1.0"
edition = "2021"

[dependencies]
candle-core = { version = "0.8.2", features = ["metal"] }
candle-nn = { version = "0.8.2", features = ["accelerate", "metal"] }
candle-transformers = { version = "0.8.2", features = ["accelerate", "metal"] }
hf-hub = { version = "0.4.1", features = ["rustls-tls"] }
serde_json = "1.0.138"
tokenizers = "0.21.0"
tokio = { version = "1.43.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
